# nonebot-plugin-nmcweather

./: .gitignore  README.md  pyproject.toml
nonebot-plugin-nmcweather/: __init__.py  data_source.py  qx.json
nonebot_plugin_nmcweather/: __init__.py  data_source.py  weather.py
